--- a/README
+++ b/README
@@ -12,7 +12,7 @@ STIX fonts is here:
 http://www.stixfonts.org/
 
 **License**
-MathJax is provided with Apache Licence version 2.
+MathJax is provided with Apache Licence version 2. (See 'LICENSE'.)
 For more details, see the project's website.
 
 **Known Issue**
